Level Transitions, Refactoring

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -407,8 +407,9 @@ BP_MainCharacter_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Cons
 EdGraph=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
 NewFunction=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
 NewFunction_4=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
-SceneComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
+SceneComponent=
 LandscapeStreamingProxy=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
+Trigger_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/NewFolder
@@ -775,6 +776,7 @@ TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Stri
 BackgroundBlur="\"Object\" \"Object.Appearance.LowQualityFallbackBrush.Margin\" \"Object.Appearance.LowQualityFallbackBrush.OutlineSettings\" "
 ContentWidget="\"Object\" \"Object.Appearance.LowQualityFallbackBrush.Margin\" \"Object.Appearance.LowQualityFallbackBrush.OutlineSettings\" "
 BP_MainCharacter_C="\"Object\" "
+BoxComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -2462,6 +2464,38 @@ LandscapeStreamingProxy.WorldPartition=True
 LandscapeStreamingProxy.Input=True
 LandscapeStreamingProxy.Actor=True
 BP_MainCharacter_C.Networking=True
+Trigger_C.Tick=True
+Trigger_C.Replication=True
+Trigger_C.Rendering=True
+Trigger_C.Collision=True
+Trigger_C.Actor=True
+Trigger_C.Input=True
+Trigger_C.HLOD=True
+Trigger_C.Physics=True
+Trigger_C.WorldPartition=True
+Trigger_C.Events=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.HLOD=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.PathTracing=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+Trigger_C.TransformCommon=True
+Trigger_C.Networking=True
+SceneComponent.TransformCommon=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2593,6 +2627,9 @@ BackgroundBlur.Appearance=True
 TextBlock.Localization=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Resources/Functional/Trigger.Trigger;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Trim_90_In.Shape_Trim_90_In;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cylinder.Shape_Cylinder;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_MainCharacter.BP_MainCharacter;
 RecentlyPlaced=/Game/Dialogue/BP_NPC_TALK1.BP_NPC_TALK1;
@@ -2610,31 +2647,28 @@ RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPers
 RecentlyPlaced=/Game/Blender_Collections/DrSPartsParsed/DrSFinal_HiltBottom.DrSFinal_HiltBottom;
 RecentlyPlaced=/Game/Blender_Collections/Donut/DonutSingle_Donut_006.DonutSingle_Donut_006;
 RecentlyPlaced=/Game/Blender_Collections/Donut/DonutSingle_Donut_003.DonutSingle_Donut_003;
-RecentlyPlaced=/Game/Blender_Collections/Donut/DonutSingle_UtensilsJar001_utensil08.DonutSingle_UtensilsJar001_utensil08;
-RecentlyPlaced=/Game/Blender_Collections/Donut/Blue_Icing.Blue_Icing;
-RecentlyPlaced=/Game/Blender_Collections/Donut/DonutSingle_Donut_007.DonutSingle_Donut_007;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Overworld
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_MainCharacter
-MRUItem2=/Game/Dialogue/WB_Dialogue_Test
-MRUItem3=/Game/Dialogue/BPI_DIALOGUE_TEST
-MRUItem4=/Game/Dialogue/BP_NPC_TALK1
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem6=/Game/Characters/Mannequins/Rigs/Poses/Quinn/Quinn_lowerarm_r_anim
-MRUItem7=/Game/Characters/Mannequins/Meshes/SKM_Quinn
-MRUItem8=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll_Montage
-MRUItem9=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem10=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll
-MRUItem11=/Game/Resources/BP_FootstepAnimNotify
-MRUItem12=/Game/ThirdPerson/AI/v2/BT_AI_v2
-MRUItem13=/Game/ThirdPerson/AI/v2/BP_AI_v2
-MRUItem14=/Game/ThirdPerson/AI/v2/AB_AI_v2
-MRUItem15=/Game/ThirdPerson/AI/v2/AI_Controller_v2
-MRUItem16=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
-MRUItem17=/Game/WB_Test
-MRUItem18=/Game/WB_TextTest
-MRUItem19=/Game/ThirdPerson/AI/v2/BTTask_Attack
+MRUItem0=/Game/Resources/Functional/Trigger
+MRUItem1=/Game/Levels/Overworld
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem3=/Game/Dialogue/WB_Dialogue_Test
+MRUItem4=/Game/Dialogue/BPI_DIALOGUE_TEST
+MRUItem5=/Game/Dialogue/BP_NPC_TALK1
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem7=/Game/Characters/Mannequins/Rigs/Poses/Quinn/Quinn_lowerarm_r_anim
+MRUItem8=/Game/Characters/Mannequins/Meshes/SKM_Quinn
+MRUItem9=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll_Montage
+MRUItem10=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem11=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll
+MRUItem12=/Game/Resources/BP_FootstepAnimNotify
+MRUItem13=/Game/ThirdPerson/AI/v2/BT_AI_v2
+MRUItem14=/Game/ThirdPerson/AI/v2/BP_AI_v2
+MRUItem15=/Game/ThirdPerson/AI/v2/AB_AI_v2
+MRUItem16=/Game/ThirdPerson/AI/v2/AI_Controller_v2
+MRUItem17=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
+MRUItem18=/Game/WB_Test
+MRUItem19=/Game/WB_TextTest
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
