Lantern object & functionality added
Socket needs to be properly enabled/disabled from player input, but functional code is there. Minor refactoring to keep similar, custom models in same spot.

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -420,9 +420,10 @@ LightComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Constrai
 PointLight=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 SpringArmComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
 K2Node_FunctionEntry=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
+StaticMeshComponent=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Architecture
+ContentBrowserTab1.SelectedPaths=/Game/Resources/Functional/Equips
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -492,7 +493,7 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Cave
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -509,11 +510,11 @@ AnimationAsset="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
-CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" "
+CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 IKRetargeter="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
@@ -792,12 +793,17 @@ LightComponentBase="\"Object\" "
 PointLightComponent="\"Object\" "
 LocalLightComponent="\"Object\" "
 ArrowComponent="\"Object\" "
+MaterialExpressionVectorParameter="\"Object\" "
+MaterialExpressionParameter="\"Object\" "
+MaterialExpression="\"Object\" "
+ABP_Quinn_PostProcess_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_MainCharacter.BP_MainCharacter
 OpenAssetsAtExit=/Game/Resources/Functional/TestRoom_TransitionTrigger.TestRoom_TransitionTrigger
-OpenAssetsAtExit=/Game/Resources/Functional/Equips/Lantern.Lantern
+OpenAssetsAtExit=/Game/Resources/Functional/Equips/Lantern/Lantern.Lantern
+OpenAssetsAtExit=/Game/Characters/Mannequins/Animations/ABP_Quinn.ABP_Quinn
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2606,6 +2612,14 @@ SceneComponent.ComponentReplication=True
 SceneComponent.Events=True
 SceneComponent.Collision=True
 ArrowComponent.Navigation=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+ABP_Quinn_PostProcess_C.RootMotion=True
+ABP_Quinn_PostProcess_C.Notifies=True
+ABP_Quinn_PostProcess_C.Montage=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2737,6 +2751,7 @@ BackgroundBlur.Appearance=True
 TextBlock.Localization=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Resources/Functional/Equips/LanternFinal.LanternFinal;
 RecentlyPlaced=/Game/Resources/Functional/Cave_TransitionTrigger.Cave_TransitionTrigger;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x400.Wall_Door_400x400;
@@ -2756,29 +2771,28 @@ RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin.DrSFinalJoin;
 RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin11.DrSFinalJoin11;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy.BP_ThirdPersonCharacter_Enemy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Resources/Functional/Equips/Lantern
-MRUItem1=/Game/Resources/Functional/TestRoom_TransitionTrigger
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_MainCharacter
-MRUItem3=/Game/Resources/Functional/Cave_TransitionTrigger
-MRUItem4=/Game/Resources/Functional/Overworld_TransitionTrigger
-MRUItem5=/Game/Resources/Functional/Trigger
-MRUItem6=/Game/Levels/Overworld
-MRUItem7=/Game/Dialogue/WB_Dialogue_Test
-MRUItem8=/Game/Dialogue/BPI_DIALOGUE_TEST
-MRUItem9=/Game/Dialogue/BP_NPC_TALK1
-MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem11=/Game/Characters/Mannequins/Rigs/Poses/Quinn/Quinn_lowerarm_r_anim
-MRUItem12=/Game/Characters/Mannequins/Meshes/SKM_Quinn
-MRUItem13=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll_Montage
-MRUItem14=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem15=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll
-MRUItem16=/Game/Resources/BP_FootstepAnimNotify
-MRUItem17=/Game/ThirdPerson/AI/v2/BT_AI_v2
-MRUItem18=/Game/ThirdPerson/AI/v2/BP_AI_v2
-MRUItem19=/Game/ThirdPerson/AI/v2/AB_AI_v2
+MRUItem0=/Game/Characters/Mannequins/Rigs/ABP_Quinn_PostProcess
+MRUItem1=/Game/Characters/Mannequins/Meshes/SKM_Quinn
+MRUItem2=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem3=/Game/Resources/Functional/Equips/Glass
+MRUItem4=/Game/Resources/Functional/Equips/LanternFinal
+MRUItem5=/Game/Resources/Functional/Equips/Metal
+MRUItem6=/Game/Resources/Functional/Equips/Chain
+MRUItem7=/Game/Resources/Functional/Equips/Candle
+MRUItem8=/Game/Resources/Functional/Equips/Lantern
+MRUItem9=/Game/Resources/Functional/TestRoom_TransitionTrigger
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem11=/Game/Resources/Functional/Cave_TransitionTrigger
+MRUItem12=/Game/Resources/Functional/Overworld_TransitionTrigger
+MRUItem13=/Game/Resources/Functional/Trigger
+MRUItem14=/Game/Levels/Overworld
+MRUItem15=/Game/Dialogue/WB_Dialogue_Test
+MRUItem16=/Game/Dialogue/BPI_DIALOGUE_TEST
+MRUItem17=/Game/Dialogue/BP_NPC_TALK1
+MRUItem18=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem19=/Game/Characters/Mannequins/Rigs/Poses/Quinn/Quinn_lowerarm_r_anim
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -2840,7 +2854,13 @@ MRUItem19=/Game/ThirdPerson/AI/v2/AB_AI_v2
 /Game/Resources/Functional/Overworld_TransitionTrigger.Overworld_TransitionTrigger=1
 /Game/Resources/Functional/TestRoom_TransitionTrigger.TestRoom_TransitionTrigger=0
 /Game/Resources/Functional/Cave_TransitionTrigger.Cave_TransitionTrigger=1
-/Game/Resources/Functional/Equips/Lantern.Lantern=1
+/Game/Resources/Functional/Equips/Lantern.Lantern=0
+/Game/Resources/Functional/Equips/Candle.Candle=1
+/Game/Resources/Functional/Equips/Chain.Chain=1
+/Game/Resources/Functional/Equips/Glass.Glass=1
+/Game/Resources/Functional/Equips/Metal.Metal=1
+/Game/Resources/Functional/Equips/LanternFinal.LanternFinal=1
+/Game/Characters/Mannequins/Rigs/ABP_Quinn_PostProcess.ABP_Quinn_PostProcess=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -3057,10 +3077,10 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 [RootWindow]
 ScreenPosition=X=414.000 Y=146.000
 WindowSize=X=1706.000 Y=1060.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/ThirdPerson/Maps
+UNR=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content
 BRUSH=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/
 FBX=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/
 FBXAnim=../../../../../../Users/krise/OneDrive/Documents/Unreal Projects/TwoBigSwords/Content/
@@ -4114,6 +4134,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/Control
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
