Revisiting stamina system
Basic code implemented to track player stamina, more to come

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -428,9 +428,10 @@ StaticMesh=StaticMesh.LOD0.MeshBuildSettings
 MeshNaniteSettings=
 LanternOn_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 PointLightComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
+K2Node=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Resources
+ContentBrowserTab1.SelectedPaths=/Game/Resources/Functional/Equips/Lantern
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -500,7 +501,7 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Cave
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -514,10 +515,10 @@ AssetViewerSettings="\"Object\" "
 AnimSequence="\"Object\" "
 AnimSequenceBase="\"Object\" "
 AnimationAsset="\"Object\" "
-SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
@@ -685,8 +686,8 @@ MediaPlayer="\"Object\" "
 SoundWave="\"Object\" "
 SoundBase="\"Object\" "
 BP_ThirdPersonCharacter_C="\"Object\" "
-Character="\"Object\" \"Object.Mesh\" "
-Pawn="\"Object\" \"Object.Mesh\" "
+Character="\"Object\" "
+Pawn="\"Object\" "
 BP_ThirdPersonCharacter_Enemy_C="\"Object\" \"Object.Actor.Tags\" "
 BP_EnemyAI_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 PawnSensingComponent="\"Object\" "
@@ -793,7 +794,7 @@ TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" "
 BackgroundBlur="\"Object\" \"Object.Appearance.LowQualityFallbackBrush.Margin\" \"Object.Appearance.LowQualityFallbackBrush.OutlineSettings\" "
 ContentWidget="\"Object\" \"Object.Appearance.LowQualityFallbackBrush.Margin\" \"Object.Appearance.LowQualityFallbackBrush.OutlineSettings\" "
-BP_MainCharacter_C="\"Object\" \"Object.Mesh\" "
+BP_MainCharacter_C="\"Object\" "
 BoxComponent="\"Object\" "
 LightComponent="\"Object\" "
 LightComponentBase="\"Object\" "
@@ -811,8 +812,6 @@ LanternOn_C="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_MainCharacter.BP_MainCharacter
-OpenAssetsAtExit=/Game/Resources/Functional/Equips/Lantern/LanternOn.LanternOn
-OpenAssetsAtExit=/Game/Characters/Mannequins/Animations/ABP_Quinn.ABP_Quinn
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2655,6 +2654,16 @@ ChildActorComponent.Variable=True
 ChildActorComponent.Cooking=True
 StaticMeshComponent.RayTracing=True
 StaticMeshComponent.Replication=True
+LanternOn_C.Tick=True
+LanternOn_C.Replication=True
+LanternOn_C.Rendering=True
+LanternOn_C.Collision=True
+LanternOn_C.Actor=True
+LanternOn_C.Input=True
+LanternOn_C.HLOD=True
+LanternOn_C.Physics=True
+LanternOn_C.WorldPartition=True
+LanternOn_C.Events=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2811,26 +2820,26 @@ RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin11.DrSFinalJoi
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Resources/Functional/Equips/Lantern/LanternOff_m
-MRUItem1=/Game/Resources/Functional/Equips/Lantern/LanternFinal
-MRUItem2=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem3=/Game/Resources/Functional/Equips/Lantern/Lantern
-MRUItem4=/Game/Resources/Functional/TestRoom_TransitionTrigger
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_MainCharacter
-MRUItem6=/Game/Characters/Mannequins/Rigs/ABP_Quinn_PostProcess
-MRUItem7=/Game/Characters/Mannequins/Meshes/SKM_Quinn
-MRUItem8=/Game/Resources/Functional/Equips/Glass
-MRUItem9=/Game/Resources/Functional/Equips/LanternFinal
-MRUItem10=/Game/Resources/Functional/Equips/Metal
-MRUItem11=/Game/Resources/Functional/Equips/Chain
-MRUItem12=/Game/Resources/Functional/Equips/Candle
-MRUItem13=/Game/Resources/Functional/Equips/Lantern
-MRUItem14=/Game/Resources/Functional/Cave_TransitionTrigger
-MRUItem15=/Game/Resources/Functional/Overworld_TransitionTrigger
-MRUItem16=/Game/Resources/Functional/Trigger
-MRUItem17=/Game/Levels/Overworld
-MRUItem18=/Game/Dialogue/WB_Dialogue_Test
-MRUItem19=/Game/Dialogue/BPI_DIALOGUE_TEST
+MRUItem0=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem1=/Game/Resources/Functional/Equips/Lantern/LanternOn
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem3=/Game/Resources/Functional/Equips/Lantern/LanternOff_m
+MRUItem4=/Game/Resources/Functional/Equips/Lantern/LanternFinal
+MRUItem5=/Game/Resources/Functional/Equips/Lantern/Lantern
+MRUItem6=/Game/Resources/Functional/TestRoom_TransitionTrigger
+MRUItem7=/Game/Characters/Mannequins/Rigs/ABP_Quinn_PostProcess
+MRUItem8=/Game/Characters/Mannequins/Meshes/SKM_Quinn
+MRUItem9=/Game/Resources/Functional/Equips/Glass
+MRUItem10=/Game/Resources/Functional/Equips/LanternFinal
+MRUItem11=/Game/Resources/Functional/Equips/Metal
+MRUItem12=/Game/Resources/Functional/Equips/Chain
+MRUItem13=/Game/Resources/Functional/Equips/Candle
+MRUItem14=/Game/Resources/Functional/Equips/Lantern
+MRUItem15=/Game/Resources/Functional/Cave_TransitionTrigger
+MRUItem16=/Game/Resources/Functional/Overworld_TransitionTrigger
+MRUItem17=/Game/Resources/Functional/Trigger
+MRUItem18=/Game/Levels/Overworld
+MRUItem19=/Game/Dialogue/WB_Dialogue_Test
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -2902,6 +2911,7 @@ MRUItem19=/Game/Dialogue/BPI_DIALOGUE_TEST
 /Game/Resources/Functional/Equips/Lantern/Lantern.Lantern=0
 /Game/Resources/Functional/Equips/Lantern/LanternFinal.LanternFinal=1
 /Game/Resources/Functional/Equips/Lantern/LanternOff_m.LanternOff_m=1
+/Game/Resources/Functional/Equips/Lantern/LanternOn.LanternOn=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
