Testing custom sound import
Lighter sound processed and dampened to sound a bit better

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -322,13 +322,13 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,InputSettings.Bindings.ActionMappings.PrepAttack,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,InputSettings.Bindings.ActionMappings.PrepAttack,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
 BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 SkeletalMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
-CapsuleComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
+CapsuleComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SlateThemeManager=
 AudioEditorSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
@@ -431,7 +431,7 @@ PointLightComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Con
 K2Node=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Resources/Functional/Equips/Lantern
+ContentBrowserTab1.SelectedPaths=/Game/Resources/SFX
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -515,11 +515,11 @@ AssetViewerSettings="\"Object\" "
 AnimSequence="\"Object\" "
 AnimSequenceBase="\"Object\" "
 AnimationAsset="\"Object\" "
-SkeletalMeshComponent="\"Object\" "
-SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
-SceneComponent="\"Object\" "
+SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
@@ -810,7 +810,7 @@ ChildActorComponent="\"Object\" "
 LanternOn_C="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_MainCharacter.BP_MainCharacter
 
 [SlateAdditionalLayoutConfig]
@@ -2820,26 +2820,26 @@ RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin11.DrSFinalJoi
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_MainCharacter
-MRUItem1=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem2=/Game/Resources/Functional/Equips/Lantern/LanternOn
-MRUItem3=/Game/Resources/Functional/Equips/Lantern/LanternOff_m
-MRUItem4=/Game/Resources/Functional/Equips/Lantern/LanternFinal
-MRUItem5=/Game/Resources/Functional/Equips/Lantern/Lantern
-MRUItem6=/Game/Resources/Functional/TestRoom_TransitionTrigger
-MRUItem7=/Game/Characters/Mannequins/Rigs/ABP_Quinn_PostProcess
-MRUItem8=/Game/Characters/Mannequins/Meshes/SKM_Quinn
-MRUItem9=/Game/Resources/Functional/Equips/Glass
-MRUItem10=/Game/Resources/Functional/Equips/LanternFinal
-MRUItem11=/Game/Resources/Functional/Equips/Metal
-MRUItem12=/Game/Resources/Functional/Equips/Chain
-MRUItem13=/Game/Resources/Functional/Equips/Candle
-MRUItem14=/Game/Resources/Functional/Equips/Lantern
-MRUItem15=/Game/Resources/Functional/Cave_TransitionTrigger
-MRUItem16=/Game/Resources/Functional/Overworld_TransitionTrigger
-MRUItem17=/Game/Resources/Functional/Trigger
-MRUItem18=/Game/Levels/Overworld
-MRUItem19=/Game/Dialogue/WB_Dialogue_Test
+MRUItem0=/Game/Resources/Functional/Equips/Lantern/lighter
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem2=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem3=/Game/Resources/Functional/Equips/Lantern/LanternOn
+MRUItem4=/Game/Resources/Functional/Equips/Lantern/LanternOff_m
+MRUItem5=/Game/Resources/Functional/Equips/Lantern/LanternFinal
+MRUItem6=/Game/Resources/Functional/Equips/Lantern/Lantern
+MRUItem7=/Game/Resources/Functional/TestRoom_TransitionTrigger
+MRUItem8=/Game/Characters/Mannequins/Rigs/ABP_Quinn_PostProcess
+MRUItem9=/Game/Characters/Mannequins/Meshes/SKM_Quinn
+MRUItem10=/Game/Resources/Functional/Equips/Glass
+MRUItem11=/Game/Resources/Functional/Equips/LanternFinal
+MRUItem12=/Game/Resources/Functional/Equips/Metal
+MRUItem13=/Game/Resources/Functional/Equips/Chain
+MRUItem14=/Game/Resources/Functional/Equips/Candle
+MRUItem15=/Game/Resources/Functional/Equips/Lantern
+MRUItem16=/Game/Resources/Functional/Cave_TransitionTrigger
+MRUItem17=/Game/Resources/Functional/Overworld_TransitionTrigger
+MRUItem18=/Game/Resources/Functional/Trigger
+MRUItem19=/Game/Levels/Overworld
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
